--- a/index.html
+++ b/index.html
@@ -431,12 +431,15 @@
             <div class="masonry">
 
                 <div class="masonry__brick">
+                    <div class="masonry">
+
+                <div class="masonry__brick">
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-mechanic.jpg" class="thumb-link" title="Restore" data-size="1050x700">
-                                <img src="images/portfolio/mechanic.jpg" 
-                                     srcset="images/portfolio/mechanic.jpg 1x, images/portfolio/mechanic@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
+                                <img src="images/portfolio/beetle.jpg" 
+                                     srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -450,6 +453,10 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
                         <div class="item-folio__caption">
                             <p>Restore.</p>
                         </div>
@@ -461,9 +468,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-sport.jpg" class="thumb-link" title="Sport" data-size="640x960">
-                                <img src="images/portfolio/sport.jpg" 
-                                     srcset="images/portfolio/sport.jpg 1x, images/portfolio/sport@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
+                                <img src="images/portfolio/lighthouse.jpg" 
+                                     srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -477,9 +484,12 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
 
                         <div class="item-folio__caption">
-                            <p>Sport</p>
+                            <p>Sport.</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -489,9 +499,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-dog.jpg" class="thumb-link" title="Cooking" data-size="1050x700">
-                                <img src="images/portfolio/dog.jpg" 
-                                     srcset="images/portfolio/dog.jpg 1x, images/portfolio/dog@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/salad.jpg" 
+                                     srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -505,8 +515,12 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
                         <span class="item-folio__caption">
-                            <p>Nature</p>
+                            <p>Nature.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -516,9 +530,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-phone.jpg" class="thumb-link" title="Technology" data-size="1868x1788">
-                                <img src="images/portfolio/phone.jpg"
-                                     srcset="images/portfolio/phone.jpg 1x, images/portfolio/phone@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/woodcraft.jpg"
+                                     srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -532,10 +546,12 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Technology</p>
+                            <p>Technology.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -545,9 +561,9 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-friends.jpg" class="thumb-link" title="Friendship" data-size="2400x3000">
-                                <img src="images/portfolio/friends.jpg"
-                                     srcset="images/portfolio/friends.jpg 1x, images/portfolio/friends@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/skaterboy.jpg"
+                                     srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -561,10 +577,12 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Friendship</p>
+                            <p>Friendship.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -574,7 +592,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="Travel" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" data-size="1050x700">
                                 <img src="images/portfolio/liberty.jpg"
                                      srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -590,24 +608,24 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Travel</p>
+                            <p>Travel.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
                 </div> <!-- end masonry__brick -->
 
-
-
                 <div class="masonry__brick">
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Photography" data-size="1050x700">
-                                <img src="images/portfolio/shutterbug.jpg"
-                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
+                            <a href="images/portfolio/gallery/g-minimalismo.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/minimalismo.jpg"
+                                     srcset="images/portfolio/minimalismo.jpg 1x, images/portfolio/minimalismo@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
                             </a>
                         </div>
@@ -621,8 +639,43 @@
                             </p>
                         </div>
 
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
                         <span class="item-folio__caption">
-                            <p>Photography</p>
+                            <p>Photography.</p>
+                        </span>
+
+                    </div> <!-- end item-folio -->
+                </div> <!-- end masonry__brick -->
+
+                <div class="masonry__brick">
+                    <div class="item-folio">
+
+                        <div class="item-folio__thumb">
+                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" data-size="1050x700">
+                                <img src="images/portfolio/shutterbug.jpg"
+                                     srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
+                                <span class="shadow-overlay"></span>
+                            </a>
+                        </div>
+
+                        <div class="item-folio__text">
+                            <h3 class="item-folio__title">
+                                Lady Shutterbug
+                            </h3>
+                            <p class="item-folio__cat">
+                                Branding
+                            </p>
+                        </div>
+
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                            <i class="im im-link"></i>
+                        </a>
+
+                        <span class="item-folio__caption">
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -631,7 +684,7 @@
             </div>
         </div> <!-- end masonry -->
 
-    </section> <!-- end works -->
+    </section> <!-- end soft-skills -->
 
 
 
