--- a/index.html
+++ b/index.html
@@ -416,22 +416,19 @@
 
 <!-- end study -->
 
-<section id="soft_skills" class="s-works target-section">
+   <section id="works" class="s-works target-section">
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
-                <h3>Soft Skills</h3>
-                <h1>My Passions.</h1>
+                <h3>Portfolio</h3>
+                <h1>See My Latest Projects.</h1>
                 
-                <p class="lead">Soft skills are those that allow us to enter into relationships with others, to face a problem in the right way, to manage one's emotions and time in a balanced way.</p>
+                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
             </div>
         </div>
 
         <div class="row masonry-wrap">
             <div class="masonry">
-
-                <div class="masonry__brick">
-                    <div class="masonry">
 
                 <div class="masonry__brick">
                     <div class="item-folio">
@@ -446,10 +443,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Work on My car
+                                The Beetle
                             </h3>
                             <p class="item-folio__cat">
-                                Restore
+                                Web Development
                             </p>
                         </div>
 
@@ -458,7 +455,7 @@
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Restore.</p>
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -477,10 +474,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Workout
+                                Lighthouse
                             </h3>
                             <p class="item-folio__cat">
-                                Sport
+                                Web Design
                             </p>
                         </div>
 
@@ -489,7 +486,7 @@
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Sport.</p>
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -508,10 +505,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Animal Lover
+                                Salad
                             </h3>
                             <p class="item-folio__cat">
-                                Nature
+                                Branding
                             </p>
                         </div>
 
@@ -520,7 +517,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Nature.</p>
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -539,10 +536,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Tech Addicted
+                                Woodcraft
                             </h3>
                             <p class="item-folio__cat">
-                                Technology
+                                Branding
                             </p>
                         </div>
 
@@ -551,7 +548,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Technology.</p>
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -570,10 +567,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Stay with friends
+                                Skaterboy
                             </h3>
                             <p class="item-folio__cat">
-                                Friendship
+                                Web Development
                             </p>
                         </div>
 
@@ -582,7 +579,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Friendship.</p>
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -601,10 +598,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Discover New cultures
+                                Liberty
                             </h3>
                             <p class="item-folio__cat">
-                                Travel
+                                Branding
                             </p>
                         </div>
 
@@ -613,7 +610,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Travel.</p>
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -632,10 +629,10 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Capture unique moments
+                                Minimalismo
                             </h3>
                             <p class="item-folio__cat">
-                                Photography
+                                Web Design
                             </p>
                         </div>
 
@@ -644,7 +641,7 @@
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Photography.</p>
+                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -684,7 +681,7 @@
             </div>
         </div> <!-- end masonry -->
 
-    </section> <!-- end soft-skills -->
+    </section> <!-- end works -->
 
 
 
