--- a/index.html
+++ b/index.html
@@ -416,14 +416,14 @@
 
 <!-- end study -->
 
-   <section id="works" class="s-works target-section">
+   <section id="soft_skills" class="s-works target-section">
 
         <div class="row narrow section-intro has-bottom-sep">
             <div class="col-full">
-                <h3>Portfolio</h3>
-                <h1>See My Latest Projects.</h1>
+                <h3>Soft Skills</h3>
+                <h1>My Passions.</h1>
                 
-                <p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>
+                <p class="lead">Soft skills are those that allow us to enter into relationships with others, to face a problem in the right way, to manage one's emotions and time in a balanced way.</p>
             </div>
         </div>
 
@@ -434,7 +434,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="The Beetle Car" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-beetle.jpg" class="thumb-link" title="Restore" data-size="1050x700">
                                 <img src="images/portfolio/beetle.jpg" 
                                      srcset="images/portfolio/beetle.jpg 1x, images/portfolio/beetle@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -443,19 +443,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                The Beetle
+                                Work on My Mini
                             </h3>
                             <p class="item-folio__cat">
-                                Web Development
+                                Restore
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
-                            <i class="im im-link"></i>
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
+                            <i class="im im-search"></i>
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Restore</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -465,7 +465,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Lighthouse" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-lighthouse.jpg" class="thumb-link" title="Sport" data-size="1050x700">
                                 <img src="images/portfolio/lighthouse.jpg" 
                                      srcset="images/portfolio/lighthouse.jpg 1x, images/portfolio/lighthouse@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -474,19 +474,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Lighthouse
+                                Workout
                             </h3>
                             <p class="item-folio__cat">
-                                Web Design
+                                Sport
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
                             <i class="im im-link"></i>
                         </a>
 
                         <div class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Sport</p>
                         </div>
 
                     </div> <!-- end item-folio -->
@@ -496,7 +496,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-salad.jpg" class="thumb-link" title="Cooking Passion" data-size="1050x700">
                                 <img src="images/portfolio/salad.jpg" 
                                      srcset="images/portfolio/salad.jpg 1x, images/portfolio/salad@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -505,19 +505,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Salad
+                                Food Lover
                             </h3>
                             <p class="item-folio__cat">
-                                Branding
+                                Cooking Passion
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
                             <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Cooking Passion</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -527,7 +527,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-woodcraft.jpg" class="thumb-link" title="Friendship" data-size="1050x700">
                                 <img src="images/portfolio/woodcraft.jpg"
                                      srcset="images/portfolio/woodcraft.jpg 1x, images/portfolio/woodcraft@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -536,19 +536,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Woodcraft
+                                Adventures with Friends
                             </h3>
                             <p class="item-folio__cat">
-                                Branding
+                                Friendship
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
                             <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Friendship</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -558,7 +558,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-skaterboy.jpg" class="thumb-link" title="Nature" data-size="1050x700">
                                 <img src="images/portfolio/skaterboy.jpg"
                                      srcset="images/portfolio/skaterboy.jpg 1x, images/portfolio/skaterboy@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -567,19 +567,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Skaterboy
+                                Animal Lover
                             </h3>
                             <p class="item-folio__cat">
-                                Web Development
+                                Nature
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
                             <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Nature</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -589,7 +589,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-liberty.jpg" class="thumb-link" title="Travels" data-size="1050x700">
                                 <img src="images/portfolio/liberty.jpg"
                                      srcset="images/portfolio/liberty.jpg 1x, images/portfolio/liberty@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -598,19 +598,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Liberty
+                                Discover new cultures
                             </h3>
                             <p class="item-folio__cat">
-                                Branding
+                                Travels
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
                             <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Travels</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -620,7 +620,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-minimalismo.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-minimalismo.jpg" class="thumb-link" title="Technology" data-size="1050x700">
                                 <img src="images/portfolio/minimalismo.jpg"
                                      srcset="images/portfolio/minimalismo.jpg 1x, images/portfolio/minimalismo@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -629,19 +629,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Minimalismo
+                                Tech Addicted
                             </h3>
                             <p class="item-folio__cat">
-                                Web Design
+                                Technology
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
                             <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Technology</p>
                         </span>
 
                     </div> <!-- end item-folio -->
@@ -651,7 +651,7 @@
                     <div class="item-folio">
 
                         <div class="item-folio__thumb">
-                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" data-size="1050x700">
+                            <a href="images/portfolio/gallery/g-shutterbug.jpg" class="thumb-link" title="Photography" data-size="1050x700">
                                 <img src="images/portfolio/shutterbug.jpg"
                                      srcset="images/portfolio/shutterbug.jpg 1x, images/portfolio/shutterbug@2x.jpg 2x" alt="">
                                 <span class="shadow-overlay"></span>
@@ -660,19 +660,19 @@
 
                         <div class="item-folio__text">
                             <h3 class="item-folio__title">
-                                Lady Shutterbug
+                                Capture unique moments
                             </h3>
                             <p class="item-folio__cat">
-                                Branding
+                                Photography
                             </p>
                         </div>
 
-                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Project link">
+                        <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
                             <i class="im im-link"></i>
                         </a>
 
                         <span class="item-folio__caption">
-                            <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem corrupti neque nisi.</p>
+                            <p>Photography</p>
                         </span>
 
                     </div> <!-- end item-folio -->
