--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                         </div>
 
                         <a href="https://www.behance.net/" class="item-folio__project-link" title="Zoom">
-                            <i class="im im-search"></i>
+                            <i class="im im-magnifier-plus"></i>
                         </a>
 
                         <div class="item-folio__caption">
